# joycond-cemuhook

./: LICENSE  Nintendo Switch Combined Joy-Cons.json  Nintendo Switch Pro Controller.json  README.md  README.rst  joycond-cemuhook.py  joycond-cemuhook.service  pyproject.toml  requirements.txt
profiles/: Nintendo Co., Ltd. Pro Controller.json  Nintendo Switch Left Joy-Con.json  Nintendo Switch Pro Controller.json  Nintendo Switch Right Joy-Con.json
src/joycond_cemuhook/: __init__.py  __main__.py
src/joycond_cemuhook/profiles/: Nintendo Switch Pro Controller.json
